config Api microservices

--- a/ecommerce-manager-service/Dockerfile
+++ b/ecommerce-manager-service/Dockerfile
@@ -1,5 +1,5 @@
 FROM postgres:13
-ENV POSTGRES_USER admin
+#ENV POSTGRES_USER admin
 ENV POSTGRES_PASSWORD admin
 ENV POSTGRES_DB ecommercemanager
 COPY src/main/resources/ecommerce_carvajal.sql /docker-entrypoint-initdb.d/
