--- a/ecommerce-manager-service/Dockerfile
+++ b/ecommerce-manager-service/Dockerfile
@@ -1,5 +1,13 @@
-FROM postgres:13
-#ENV POSTGRES_USER admin
-ENV POSTGRES_PASSWORD admin
-ENV POSTGRES_DB ecommercemanager
-COPY src/main/resources/ecommerce_carvajal.sql /docker-entrypoint-initdb.d/
+FROM openjdk:11
+
+ADD build/libs /opt/spring-boot
+
+ENV SERVER_HOME /opt/spring-boot
+
+WORKDIR /opt/spring-boot
+
+### Open Ports
+EXPOSE 9000
+
+### Start instance
+ENTRYPOINT ["java", "-jar", "-Dfile.encoding=UTF-8", "/opt/spring-boot/ecommerce-manager-service-0.0.1-SNAPSHOT.jar"]
